--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "e-commerc-vegie-app",
+  "name": "organic-harvest",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "locomotive-scroll": "^5.0.0-beta.21",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
