--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
     "tailwindcss": "^4"
-  }
+  },
+  "engines": {
+  "node": "20.14.0"
+}
 }
