--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
+    "motion": "^12.23.12",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -22,6 +24,6 @@
     "tailwindcss": "^4"
   },
   "engines": {
-  "node": "20.18.0"
-}
+    "node": "20.18.0"
+  }
 }
